expo-echo-server/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: experience-tools
  labels:
    istio-injection: enabled
