expo-echo-server/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: expo-echo-server
  labels:
    app: expo-echo-server
    service: expo-echo-server
    version: v1
spec:
  ports:
    - name: http
      port: 8080
      protocol: TCP
      targetPort: 8080
  selector:
    app: expo-echo-server
    version: v1
