expo-echo-server/expo-echo-server.yaml
apiVersion: v1
kind: Service
metadata:
  name: expo-echo-server
  namespace: experience-tools
  labels:
    app: expo-echo-server
    service: expo-echo-server
    version: v1
spec:
  ports:
    - name: http
      port: 8080
      protocol: TCP
      targetPort: 8080
  selector:
    app: expo-echo-server
    version: v1
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: expo-echo-server-v1
  namespace: experience-tools
  labels:
    app: expo-echo-server
    version: v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: expo-echo-server
      version: v1
  template:
    metadata:
      labels:
        app: expo-echo-server
        version: v1
    spec:
      containers:
      - name: expo-echo-server
        image: "docker.prod.walmart.com/experience-tools/expodevclusterechoserver:0.0.5"
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8080
---
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: expo-echo-server-gateway
  namespace: experience-tools
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: expo-echo-server-vitual-service
  namespace: experience-tools
spec:
  hosts:
  - "*"
  gateways:
  - expo-echo-server-gateway
  http:
  - match:
    - uri:
        prefix: /echo
    route:
    - destination:
        host: expo-echo-server
        port:
          number: 8080
