expo-echo-server/virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: expo-echo-server-vitual-service
spec:
  hosts:
  - "*"
  gateways:
  - istio-system/ingressgateway
  http:
  - match:
    - uri:
        prefix: /echo
    route:
    - destination:
        host: expo-echo-server
        port:
          number: 8080
